test/good/arrays/range09.px

a = [""]
a = ['a'..'c' by 2]
print a[1] + 'x'
