test/bad/arrays/comprehension01.px

a = [for x in 1..'c' yield x]
